ajustado bug no livro de liderança

--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
         <div class="swiper-wrapper">
             <!-- Slides -->
           <div class="swiper-slide"><img src="./img/ApacheKafka.svg" alt="Livro sobre Apache Kafka"></div>
-          <div class="swiper-slide"><img src="./img/Liderança.svg" alt="Livro sobre liderança em design"></div>
           <div class="swiper-slide"><img src="./img/Javascript.svg" alt="Livro sobre JavaScript"></div>
           <div class="swiper-slide"><img src="./img/Guia Front-end.svg" alt="Livro guia sobre Front-end"></div>
           <div class="swiper-slide"><img src="./img/Portugol.svg" alt="Livro sobre Portugol"></div>
@@ -139,10 +138,9 @@
           <!-- Slides -->
           <div class="swiper-slide"><img src="./img/Guia Front-end.svg" alt="Livro guia sobre Front-end"></div>
           <div class="swiper-slide"><img src="./img/Acessibilidade.svg" alt="Livro sobre Acessibilidade"></div>
-          <div class="swiper-slide"><img src="./img/Liderança.svg" alt="Livro sobre liderança" em design></div>
           <div class="swiper-slide"><img src="./img/Javascript.svg" alt="Livro sobre JavaScript"></div>
           <div class="swiper-slide"><img src="./img/ApacheKafka.svg" alt="Livro sobre Apache Kafka"></div>
-          <div class="swiper-slide"><img src="./img/Portugol.svg" alt="Livro sobre Portugol" em design></div>
+          <div class="swiper-slide"><img src="./img/Portugol.svg" alt="Livro sobre Portugol"></div>
         </div>
         <!-- If we need navigation buttons -->
         <div class="swiper-button-prev"></div>
